--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,2 @@
-export(desc,g.range,global,kott.addvars,kottby,kottby.user,kottcalibrate,
+export(bounds.hint,desc,g.range,global,kott.addvars,kottby,kottby.user,kottcalibrate,
 kottdesign,kott.quantile,kott.ratio,kott.regcoef,pop.template,population.check)
