--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,14 @@ Description: Delete-A-Group Jackknife replication. Calibration of
         regression coefficients. Estimates, standard errors and
         confidence intervals for user-defined estimators (even
         non-analytic). Domain (subpopulation) estimation.
-Version: 1.1.1
+Version: 1.2
 Author: Diego Zardetto
 Maintainer: Diego Zardetto <zardetto@istat.it>
-License: file LICENCE
+License: EUPL
 Depends: R (>= 2.5.1)
 Suggests: MASS
-Packaged: 2010-02-15 15:17:43 UTC; zardetto
+Packaged: 2013-03-14 07:10:26 UTC; ripley
 Repository: CRAN
-Date/Publication: 2010-02-15 17:03:50
+Date/Publication: 2013-03-14 08:23:34
+NeedsCompilation: no
+License_is_FOSS: yes
